
- swap in 3D via cavity operator
- tetgen shell uses poly format to allow voids
- tetgen called with q2.0/10 to create coarser initial grids without slivers
- termination recommendation based on one percent edge-metric ratio limit change
- edge-metric ratio post floor more aggresive once ceiling drops below 3
- ref_adapt_parameter is private method
- ref_adapt_pass returns termination recommendation
- curvature based metric includes geometry topology feature size
- version 3 .meshb/.solb export for grids larger than 2 GBytes (10M vertex)
- ref_driver RCM global node order per proc on export
- ref_grid_pack uses RCM ordering
- ref_node_metric removed, use getters/setters, results in code speedup
- ref_metric_unit_node removed, metric initialized to unity during ref_node_add
- ref_metric_test --fixed-point asks for the timestep_increment

Tue, Nov 17, 2018 : Released Refine 1.8.21

- ref_driver repartitions before first pass to improve partition "shape"
- gather tecplot refactored for multiple scalars and T-infinity viz plugin
- added tri-surface normal deviation constraint
- added tri-surface normal deviation to smooth/swap tri quality
- ref_geom_test tessellation can be adapted before volume generation (w/ --surf)
- added non-parallel surface adaptation without volume (w/ swap)
- added non-parallel .su2 export
- extracted ref_recon from ref_metric
- ref_interp_test --field interpolates solution
- ref_metric_test --fixed-point metric from series of solb
- configuration does not need fortran compiler, gfortran or ifort assumed
- ref_metric_test --kexact parallel and can grow stencil for conditioning

Tue, Sep 11, 2018 : Released Refine 1.8.20

- added limits (current min/max) on ratio during operations
- sequential 2D continuously interpolates metric 

Thu, Aug 30, 2018 : Released Refine 1.8.19

- added histogram movies
- uv_area sign based on topology
- triangle windings are flipped for normal into domain
- cavity operator for edge split on boundary