@@ -1,4 +1,5 @@
 
+- curvature based metric defaults to 2 segments per radian (28 degrees)
 - swap in 3D via cavity operator
 - tetgen shell uses poly format to allow voids
 - tetgen called with q2.0/10 to create coarser initial grids without slivers
